Adding more stuff

--- a/learn-spring-boot/src/main/resources/application.properties
+++ b/learn-spring-boot/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=learn-spring-boot
+# logging.level.org.springframework=DEBUG
+spring.profiles.active=prod
+
+currency-service.url=http://cuurency.service.money
+currency-service.username=username1
+currency-service.key=p@sSw0rd
+
+management.endpoints.web.exposure.include=health,metrics
