Looks good for now

--- a/my-first-web-app/src/main/resources/application.properties
+++ b/my-first-web-app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=my-first-web-app
 spring.log.level=DEBUG
 server.port=8080
-prefix=/WEB-INF/jsp
-suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=DEBUG
