--- a/my-first-web-app/src/main/resources/application.properties
+++ b/my-first-web-app/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.log.level=DEBUG
 server.port=8080
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
+spring.mvc.format.date=yyyy-MM-dd
