--- a/my-first-web-app/pom.xml
+++ b/my-first-web-app/pom.xml
@@ -82,6 +82,11 @@
 			<artifactId>jquery</artifactId>
 			<version>3.7.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap-datepicker</artifactId>
+			<version>1.10.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
