--- a/my-first-web-app/src/main/resources/application.properties
+++ b/my-first-web-app/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.application.name=my-first-web-app
-spring.log.level=DEBUG
+logging.level.root=DEBUG
+#spring.log.level=DEBUG
 server.port=8080
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=INFO
 spring.mvc.format.date=yyyy-MM-dd
+spring.datasource.url=jdbc:h2:mem:testDb
+#spring.datasource.url=jdbc:h2:file:./resources/testDb
+#spring.datasource.username=testUser
+#spring.datasource.password=testPass
+#spring.datasource.driver-class-name=org.h2.Driver
