--- a/my-first-web-app/src/main/resources/application.properties
+++ b/my-first-web-app/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=INFO
 spring.mvc.format.date=yyyy-MM-dd
 spring.datasource.url=jdbc:h2:mem:testDb
+spring.jpa.defer-datasource-initialization=true
 #spring.datasource.url=jdbc:h2:file:./resources/testDb
 #spring.datasource.username=testUser
 #spring.datasource.password=testPass
