The correct way later.

--- a/my-first-web-app/src/main/resources/application.properties
+++ b/my-first-web-app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=my-first-web-app
-logging.level.root=DEBUG
+logging.level.root=INFO
 #spring.log.level=DEBUG
 server.port=8080
 spring.mvc.view.prefix=/WEB-INF/jsp/
@@ -8,6 +8,7 @@ logging.level.org.springframework.web=INFO
 spring.mvc.format.date=yyyy-MM-dd
 spring.datasource.url=jdbc:h2:mem:testDb
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=false
 #spring.datasource.url=jdbc:h2:file:./resources/testDb
 #spring.datasource.username=testUser
 #spring.datasource.password=testPass
