--- a/my-first-web-app/src/main/resources/application.properties
+++ b/my-first-web-app/src/main/resources/application.properties
@@ -6,8 +6,13 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=INFO
 spring.mvc.format.date=yyyy-MM-dd
-spring.datasource.url=jdbc:h2:mem:testDb
+#spring.datasource.url=jdbc:h2:mem:testDb
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/todos
+spring.datasource.username=todos-user
+spring.datasource.password=dummytodos
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
 #spring.datasource.url=jdbc:h2:file:./resources/testDb
 #spring.datasource.username=testUser
